--- a/learning_flask/microblog/app/templates/base.html
+++ b/learning_flask/microblog/app/templates/base.html
@@ -10,7 +10,27 @@
 </head>
 
 <body>
-    {%block content%} {%endblock%}
+    <div>
+        Microblog:
+        <a href="/index">Home</a>
+        {% if current_user.is_anonymous %}
+        <a href="/login">Login</a>
+        {%else%}
+        <a href="/logout">Logout</a>
+        {% endif%}
+
+    </div>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}{% endblock %}
 </body>
 
 </html>
