--- a/learning_flask/microblog/app/templates/index.html
+++ b/learning_flask/microblog/app/templates/index.html
@@ -1,37 +1,10 @@
-<!doctype html>
-<html>
+{% extends "base.html" %}
 
-<head>
-    {% if title %}
-    <title>{{ title }} - Microblog</title>
-    {% else %}
-    <title>Welcome to Microblog</title>
-    {% endif %}
-</head>
-
-<body>
-    <div>
-        Microblog:
-        <a href="{{url_for('index')}}">Home</a>
-        <a href="{{url_for('login')}}">Login</a>
-    </div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-    {% block content %}{% endblock %}
-    <h1>Hi, {{ user.username }}!</h1>
-    {% for post in posts %}
-    <div>
-        <p>{{ post.author.username }} says: <b>{{ post.body }}</b></p>
-    </div>
-    {% endfor %}
-</body>
-
-</html>
+{% block content %}
+<h1>Hi, {{ current_user.username }}!</h1>
+{% for post in posts %}
+<div>
+    <p>{{ post.author.username }} says: <b>{{ post.body }}</b></p>
+</div>
+{% endfor %}
+{% endblock %}
