--- a/learning_flask/microblog/app/templates/login.html
+++ b/learning_flask/microblog/app/templates/login.html
@@ -21,5 +21,6 @@
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit() }}</p>
     <p>New User? <a href="{{url_for('register')}}">Click Here</a></p>
+    <p>Forgot your password? <a href="{{url_for('reset_password_request')}}">Click to reset it</a></p>
 </form>
 {% endblock %}
