--- a/learning_flask/microblog/app/templates/404.html
+++ b/learning_flask/microblog/app/templates/404.html
@@ -1,5 +1,6 @@
-{% extends 'base.html'%}
+{% extends "base.html" %}
 
-{%block content%}
-<h1>This fuching page does not exist!!!</h1>
-{%endblock%}
+{% block app_content %}
+<h1>Not Found</h1>
+<p><a href="{{ url_for('index') }}">Back</a></p>
+{% endblock %}
